# whatsapp-transcriber

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  send_transcribe_all.py  test_main.py  test_send_transcribe_all.py
