[project]
name = "whatsapp-transcriber"
version = "0.1.0"
description = "WhatsApp audio transcription project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "openai>=1.0.0",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.5.0",
    "uvicorn>=0.41.0",
]
